quick fix for overlap issue

--- a/less/app.less
+++ b/less/app.less
@@ -559,7 +559,7 @@ button {
 
 		left: 0; right: 0;
 
-		top: -100vh;
+		top: -200vh;
 		opacity: 0;
 
 		transition: top 5s, opacity 10s;
